@@ -11,8 +11,10 @@ lbdb (0.41) unstable; urgency=medium
   * fetchaddr: avoid segfault on empty lines (Closes: #715901).
   * fetchaddr: change real name length limit from 30 to 70.  Thanks to
     Andrey Skvortsov for providing a patch (Closes: #780532).
+  * vcquery: order N: field: Prefixes GivenName AddName FamilyName Suffix
+    (Closes: #578155).
 
- -- Roland Rosenfeld <roland@debian.org>  Fri, 04 Mar 2016 19:09:47 +0100
+ -- Roland Rosenfeld <roland@debian.org>  Fri, 04 Mar 2016 21:16:35 +0100
 
 lbdb (0.40) unstable; urgency=medium
 
